--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -20,7 +20,7 @@
     institute: Delhivery
   - image: /assets/img/icons/nmims.png
     date: Jun 2019 - May 2021
-    description: 
+    description: >
       - Grad Student (MBA)
         - Product Intern at Delhivery
         - Social Work Intern at Plan@Earth
