--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -21,7 +21,7 @@
   - image: /assets/img/icons/nmims.png
     date: Jun 2019 - May 2021
     description: >
-      - Grad Student (MBA)
+      Grad Student (MBA)
         - Product Intern at Delhivery
         - Social Work Intern at Plan@Earth
     institute: NMIMS
