--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -20,10 +20,10 @@
     institute: Delhivery
   - image: /assets/img/icons/nmims.png
     date: Jun 2019 - May 2021
-    description: >
+    description:
       Grad Student (MBA)
-        - Product Intern at Delhivery
-        - Social Work Intern at Plan@Earth
+      Product Intern at Delhivery
+      Social Work Intern at Plan@Earth
     institute: NMIMS
   - image: /assets/img/icons/infosys.png
     date: Jul 2014 - Mar 2019
