--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -9,6 +9,9 @@
   - image: /assets/img/icons/idfc.jpg
     date: July 2021 - May 2022
     description: Technology Product Manager
+    content:
+      - Product maanager for Employee Experience Mobile App
+      - Product Manager for Banking and Relationship Management CRM portals
     institute: IDFC First Bank
  # - image: /assets/img/icons/pe.png
  #   date: Jan 2021 - Feb 2021
@@ -28,6 +31,11 @@
   - image: /assets/img/icons/infosys.png
     date: Jul 2014 - Mar 2019
     description: Technology Analyst
+    content:
+      - Product Owner for Infosys Test Data Management solution
+      - Full stack developer (Java, Spring Boot, AngularJS) at Infosys SET Labs (R&D)
+      - Senior Systems Engineer providing maintenance and support for CRM application migration from Mainframe to Java for a Major US publication client
+      - Systems Engineer involved in Content Management for a Fortune 500 Pharmaceutial client
     institute: Infosys
   - image: /assets/img/icons/mgu.png
     date: Jun 2010 - Jun 2014
