--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -25,7 +25,7 @@
     date: Jun 2019 - May 2021
     description: Grad Student (MBA)
     content:
-      - Product Intern at Delhivery
+      - Product Intern at Delhivery for address disambiguaton service, Addfix
       - Social Work Intern at Plan@Earth
     institute: NMIMS
   - image: /assets/img/icons/infosys.png
