--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -33,8 +33,8 @@
     description: Technology Analyst
     content:
       - Product Owner for Infosys Test Data Management solution
-      - Full stack developer (Java, Spring Boot, AngularJS) at Infosys SET Labs (R&D)
-      - Senior Systems Engineer providing maintenance and support for CRM application migration from Mainframe to Java for a Major US publication client
+      - Full stack developer at Infosys SET Labs (R&D)
+      - Senior Systems Engineer for CRM application migration from Mainframe to Java for a Major US publication client
       - Systems Engineer involved in Content Management for a Fortune 500 Pharmaceutial client
     institute: Infosys
   - image: /assets/img/icons/mgu.png
