--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -46,6 +46,6 @@
   - image: /assets/img/icons/iis.jpg
     date: 1997 - 2000
     description: Student
-    institute: International Indian School - Ar'Ar
+    institute: International Indian School - Saudi Arabia
 # First image of the Timeline
 - timeline-img: /assets/img/icons/favicon-baby.ico
