--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -10,7 +10,8 @@
     date: July 2021 - May 2022
     description: Technology Product Manager
     content:
-      - Product maanager for Employee Experience Mobile App
+      - Management Trainee in Corporate Technology
+      - Product Manager for Employee Experience Mobile App
       - Product Manager for Banking and Relationship Management CRM portals
     institute: IDFC First Bank
   - image: /assets/img/icons/nmims.png
