--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -9,7 +9,7 @@
   - image: /assets/img/icons/idfc.jpg
     date: July 2021 - May 2022
     description: Technology Product Manager
-    content:
+    content.data:
       - Management Trainee in Corporate Technology
       - Product Manager for Employee Experience Mobile App
       - Product Manager for Banking and Relationship Management CRM portals
@@ -18,14 +18,15 @@
     date: Jun 2019 - May 2021
     description: Grad Student (MBA)
     content:
-      - Product Intern at Delhivery
-      - Address disambiguaton service, Addfix
-      - Social Work Intern at Plan@Earth
+      - data: Product Intern at Delhivery
+        item: 
+        - Address disambiguaton service, Addfix
+      - data: Social Work Intern at Plan@Earth
     institute: NMIMS
   - image: /assets/img/icons/infosys.png
     date: Jul 2014 - Mar 2019
     description: Technology Analyst
-    content:
+    content.data:
       - Product Owner for Infosys Test Data Management solution
       - Full stack developer at Infosys SET Labs (R&D)
       - Senior Systems Engineer for CRM application migration from Mainframe to Java for a Major US publication client
