--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -22,7 +22,8 @@
     - data: Product Intern at Delhivery
       item: 
         - Address disambiguaton service, Addfix
-      - data: Social Work Intern at Plan@Earth
+    - data: Social Work Intern at Plan@Earth
+      item:
         - Content management for online marketplace of Upcycling Unit
         - Business case for repurposing of End of Life Tires
     institute: NMIMS
