--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -14,7 +14,7 @@
         - Management Trainee in Corporate Technology
         - Product Manager for Employee Experience Mobile App
         - Product Manager for Banking and Relationship Management CRM portals
-        - Enabled setting up of Automation Testing CoE
+        - Initial team who set up Automation Testing CoE
     institute: IDFC First Bank
   - image: /assets/img/icons/nmims.png
     date: Jun 2019 - May 2021
@@ -22,7 +22,7 @@
     content:
     - data: Product Intern at Delhivery
       item: 
-        - Address disambiguaton service, Addfix
+        - Addfix (Address disambiguaton service) as a Product
     - data: Social Work Intern at Plan@Earth
       item:
         - Content management for online marketplace of Upcycling Unit
@@ -35,8 +35,8 @@
     - data:
         - Product Owner for Infosys Test Data Management solution
         - Full stack developer at Infosys SET Labs (R&D for Validation servies CoE)
-        - Senior Systems Engineer for CRM application migration from Mainframe to Java for a Major US publication client
-        - Systems Engineer involved in Content Management for a Fortune 500 Pharmaceutial client
+        - Senior Systems Engineer for CRM application migration for a major US Newsprint company
+        - Systems Engineer involved in Content Management for a Fortune 500 Pharmaceutial company
     institute: Infosys
   - image: /assets/img/icons/mgu.png
     date: Jun 2010 - Jun 2014
