--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -6,6 +6,8 @@
     date: May 2022 - Today
     description: Product Manager
     institute: Microsoft
+
+  
   - image: /assets/img/icons/idfc.jpg
     date: July 2021 - May 2022
     description: Technology Product Manager
@@ -16,6 +18,8 @@
         - Product Manager for Banking and Relationship Management CRM portals
         - Initial team who set up Automation Testing CoE
     institute: IDFC First Bank
+
+  
   - image: /assets/img/icons/nmims.png
     date: Jun 2019 - May 2021
     description: Grad Student (MBA)
@@ -30,6 +34,8 @@
         - Content management for online marketplace of Upcycling Unit
         - Business case for repurposing of End of Life Tires
     institute: NMIMS
+
+  
   - image: /assets/img/icons/infosys.png
     date: Jul 2014 - Mar 2019
     description: Technology Analyst
@@ -40,25 +46,30 @@
         - Senior Systems Engineer for CRM application migration for a major US Newsprint company
         - Systems Engineer involved in Content Management for a Fortune 500 Pharmaceutial company
     institute: Infosys
+
+  
   - image: /assets/img/icons/mgu.png
     date: Jun 2010 - Jun 2014
     description: Undergrad Student
     content:
     - data: 
       - B.Tech in Electronics and Communication Engineering
-    institute: Mahatma Gandhi University
-    content:
     - data: 
-      - Elective courses
-      item: 
-        - Medical Electronics
-        - Digital Image Processing
-      - Project
-      item: 
-        - Intra prediction of H.264 using MATLAB
-      - Seminar topic
-      item: 
-        - Stretchable electronics
+        - Elective courses
+        item: 
+          - Medical Electronics
+          - Digital Image Processing
+     - data:
+        - Project
+        item: 
+          - Intra prediction of H.264 using MATLAB
+     - data:
+        - Seminar topic
+        item: 
+          - Stretchable electronics
+    institute: Mahatma Gandhi University
+
+  
   - image: /assets/img/icons/rps.png
     date: 2001 - 2010
     description: Student
@@ -68,6 +79,8 @@
       item: 
         - Physics, Chemistry, Biology, Mathematics, English
     institute: Rajagiri Public School
+
+  
   - image: /assets/img/icons/vps.png
     date: 2000 - 2001
     description: Student
@@ -76,5 +89,7 @@
     date: 1997 - 2000
     description: Student
     institute: International Indian School, Kingdom of Saudi Arabia
+
+
 # First image of the Timeline
 - timeline-img: /assets/img/icons/favicon-baby.ico
