--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -37,8 +37,8 @@
     - data:
         - Product Owner for Infosys Test Data Management solution
         - Full stack developer at Infosys SET Labs (R&D for Validation servies CoE)
-        - Senior Systems Engineer for CRM application migration for a major US Newsprint company
-        - Systems Engineer involved in Content Management for a Fortune 500 Pharmaceutial company
+        - CRM application migration for a major US based Newsprint company
+        - Content Management for a Fortune 500 Pharmaceutial company
     institute: Infosys
   - image: /assets/img/icons/mgu.png
     date: Jun 2010 - Jun 2014
