--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -29,6 +29,11 @@
       item:
         - Content management for online marketplace of Upcycling Unit
         - Business case for repurposing of End of Life Tires
+    - data: 
+        - Member of Marketing Committee (NjM -Not Just Marketing)
+      item: 
+        - Spearheaded launch of webisite for Marketing Committee
+        - Corportate Project - Market research for Godrej Consumer Products
     institute: NMIMS
   - image: /assets/img/icons/infosys.png
     date: Jul 2014 - Mar 2019
