--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -34,7 +34,7 @@
       item: 
         - Spearheaded launch of webisite for Marketing Committee
         - Corportate Project - Market research for Godrej Consumer Products
-    institute: NMIMS
+    institute: NMIMS, Mumbai
   - image: /assets/img/icons/infosys.png
     date: Jul 2014 - Mar 2019
     description: Technology Analyst
