--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ image_alt: favicon    # image description
 # HTML Head #
 #############
 lang: "en"
-quote: "test"
+quote: "replace with fear of unknown with curiosity..."
 
 # =======================================#
 # -----------SITE SETTINGS---------------#
