--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,22 @@ image_alt: favicon    # image description
 # HTML Head #
 #############
 lang: "en"
-quote: "replace with fear of unknown with curiosity..."
+
+##############################
+# Dynamic Text on the Header #
+##############################
+
+dynamic-typing: True
+shuffle: True # Shuffle the lines.
+loop: True
+loop-count: False # Set False for infinite loop, or set any number for finite loop.
+type-speed: 10
+start-delay: 200
+delete-delay: 5000
+me-img: "https://github.com/user_name.png?size=500"
+lines: # You can add HTML Tags in the Text
+  - text: "replace the fear of unknown"
+  - text: with curiosity..."
 
 # =======================================#
 # -----------SITE SETTINGS---------------#
