--- a/_config.yml
+++ b/_config.yml
@@ -20,16 +20,16 @@ lang: "en"
 ##############################
 
 dynamic-typing: True
-shuffle: True # Shuffle the lines.
+shuffle: False # Shuffle the lines.
 loop: True
 loop-count: False # Set False for infinite loop, or set any number for finite loop.
 type-speed: 10
 start-delay: 200
 delete-delay: 5000
-me-img: "https://github.com/user_name.png?size=500"
+#me-img: "https://github.com/user_name.png?size=500"
 lines: # You can add HTML Tags in the Text
   - text: "replace the fear of unknown"
-  - text: with curiosity..."
+  - text: "with curiosity..."
 
 # =======================================#
 # -----------SITE SETTINGS---------------#
