--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -4,8 +4,8 @@ links:
 - title: About
   url: about.html
 
-- title: contact
+- title: Contact
   url: contact.html
 
-- title: timeline
+- title: Timeline
   url: timeline.html
