--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -8,7 +8,7 @@ links:
   url: contact.html
 
 - title: Timeline
-  url: home.html
+  url: timeline.html
 
 - title: Education
-  url: home.html
+  url: education.html
