--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ phonenumber:
 #========================================#
 # --------- UI THEMES -------------------#
 #========================================#
-ui_theme: abyss                                 # abyss Create your own theme by setting options in _data/themes.yml
+ui_theme: dark                                 # abyss Create your own theme by setting options in _data/themes.yml
 
 
 # =======================================#
