--- a/_data/themes.yml
+++ b/_data/themes.yml
@@ -7,7 +7,7 @@ abyss:
     link-color: "#272343"
     link-font: "Poppins"
     font: "Poppins"
-    font-color: "Black"
+    font-color: "white"
     social-color: "#CCCCCC"
     footer-social-color: "Black"
     button-color: "black"
