--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -79,4 +79,4 @@
     description: Student
     institute: International Indian School, Kingdom of Saudi Arabia
 # First image of the Timeline
-- timeline-img: /assets/img/icons/baby.png
+- timeline-img: assets/img/icons/baby.png
