--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ lines: # You can add HTML Tags in the Text
 # -----------SITE SETTINGS---------------#
 #========================================#: 
 author: Reems
-profile_image: /assets/img/avatar/me.jpg 
+profile_image: /assets/img/avatar/me - s.jpg 
 snippet:
 twitter: 
 github: reemstk
