--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -27,7 +27,7 @@
     - data: 
         - Social Work Intern at Plan@Earth - Solid Waste Management Trust
       item:
-        - Content management for online marketplace of Upcycling Unit
+        - Content management for online marketplace of Upcycling unit
         - Business case for repurposing of End of Life Tires
     - data: 
         - Member of Marketing Committee, NjM (Not Just Marketing)
