--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -34,7 +34,7 @@
       item: 
         - Spearheaded launch of webisite for Marketing Committee
         - Corportate Project - Market research for Godrej Consumer Products
-    institute: NMIMS, Mumbai
+    institute: NMIMS - Mumbai, IN
   - image: /assets/img/icons/infosys.png
     date: Jul 2014 - Mar 2019
     description: Technology Analyst
@@ -62,7 +62,7 @@
         - Seminar - Stretchable electronics   
     - data:
         - Intern at BSNL - PSU under DoT, India
-    institute: Mahatma Gandhi University
+    institute: Mahatma Gandhi University, IN
   - image: /assets/img/icons/rps.png
     date: 2001 - 2010
     description: Student
@@ -71,15 +71,15 @@
         - 12th Grade Major Subjects
       item: 
         - Physics, Chemistry, Biology, Mathematics, English
-    institute: Rajagiri Public School
+    institute: Rajagiri Public School, IN
   - image: /assets/img/icons/vps.png
     date: 2000 - 2001
     description: Student
-    institute: Viswajyothi Public School
+    institute: Viswajyothi Public School, IN
   - image: /assets/img/icons/iis.jpg
     date: 1997 - 2000
     description: Student
-    institute: International Indian School, Kingdom of Saudi Arabia
+    institute: International Indian School, KSA
   - image: /assets/img/icons/baby.png
 # First image of the Timeline
 #- timeline-img: /assets/img/icons/baby.png
