--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,6 +1,6 @@
 - channel: GitHub
   url: https://github.com/reemstk
-  title: @reemstk
+  title: reemstk
   icon: fa-github-square
 - channel: Email
   url: reemstk.cv [at] gmail [dot] com
