--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,8 +3,8 @@
   title: reemstk
   icon: fa-github-square
 - channel: Email
-  url: reemstk.cv [at] gmail [dot] com
-  title: /in/reemstk
+  url: 
+  title: reemstk.cv [at] gmail [dot] com
   icon: fa-envelope
 - channel: LinkedIn
   url: https://www.linkedin.com/in/reemstk
