--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,7 +3,7 @@
   title: reemstk
   icon: fab fa-github-square
 - channel: Email
-  url: 
+  url: ''
   title: reemstk.cv [at] gmail [dot] com
   icon: fas fa-envelope
 - channel: LinkedIn
