--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -14,7 +14,7 @@
         - Management Trainee in Corporate Technology
         - Product Manager for Employee Experience Mobile App
         - Product Manager for Banking and Relationship Management CRM portals
-        - Initial team who set up Automation Testing CoE
+        - Founding team of Automation Testing CoE
     institute: IDFC First Bank
   - image: /assets/img/icons/nmims.png
     date: Jun 2019 - May 2021
