--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ lines: # You can add HTML Tags in the Text
 # =======================================#
 # -----------SITE SETTINGS---------------#
 #========================================#: 
-author: Reems
+author: Reems Thomas Kottackal
 profile_image: /assets/img/avatar/me - s.jpg 
 snippet:
 twitter: 
