--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -13,7 +13,7 @@
     - data:
         - Management Trainee in Corporate Technology
         - Product Manager for Employee Experience Mobile App
-        - Product Manager for Banking and Relationship Management CRM portals
+        - Product Manager for Banking Console
         - Founding team of Automation Testing CoE
     institute: IDFC First Bank
   - image: /assets/img/icons/nmims.png
