--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -27,12 +27,12 @@
     - data: 
         - Social Work Intern at Plan@Earth - Solid Waste Management Trust
       item:
-        - Content management for online marketplace of Upcycling unit
+        - Content management for online marketplace of Upcycling Unit
         - Business case for repurposing of End of Life Tires
     - data: 
         - Member of Marketing Committee, NjM (Not Just Marketing)
       item: 
-        - Spearheaded launch of webisite for Marketing Committee
+        - Launched website for Marketing Committee
         - Corportate Project - Market research for Godrej Consumer Products
     institute: NMIMS - Mumbai, IN
   - image: /assets/img/icons/infosys.png
