--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -33,7 +33,7 @@
         - Member of Marketing Committee, NjM (Not Just Marketing)
       item: 
         - Launched website for Marketing Committee
-        - Corportate Project - Market research for Godrej Consumer Products
+        - Corporate Project - Market research for Godrej Consumer Products
     institute: NMIMS - Mumbai, IN
   - image: /assets/img/icons/infosys.png
     date: Jul 2014 - Mar 2019
