--- a/_config.yml
+++ b/_config.yml
@@ -157,9 +157,9 @@ font_awesome_id: 32a2b2a489                       # Register for free at https:/
 # =======================================#        # For more information about these settings, visit https://htmlhead.dev #
 # ------------META TAG SETTINGS----------#
 #========================================#
-google-site-verification:                         #<meta name="google-site-verification" content="verification_token"><!-- Google Search Console -->
+google-site-verification: qxPjPCd2_R_gZDsiAh-HNUGn9v1uSJKCcEIpEKJ6gT8                        #<meta name="google-site-verification" content="verification_token"><!-- Google Search Console -->
 yandex-verification:                              #<meta name="yandex-verification" content="verification_token"><!-- Yandex Webmasters -->
-msvalidate:                                       # meta name="msvalidate.01" content="verification_token"><!-- Bing Webmaster Center -->
+msvalidate: 0F5DA220AC3B84A47F321349D77278B6      # meta name="msvalidate.01" content="verification_token"><!-- Bing Webmaster Center -->
 alexaVerifyID:                                    # <meta name="alexaVerifyID" content="verification_token"><!-- Alexa Console -->
 pinterestdomain_verify:                           #<meta name="p:domain_verify" content="code_from_pinterest"><!-- Pinterest Console-->
 norton-safeweb:                                   # <meta name="norton-safeweb-site-verification" content="norton_code"><!-- Norton Safe Web -->
