--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: REEMS THOMAS KOTTACKAL
 email: reemstk.cv@gmail.com
-description: personal profile
+description: personal profile of REEMS THOMAS KOTTACKAL
 baseurl:                                       # the subpath of your site, e.g. /blog
 url: "https://reemstk.github.io"          # the base hostname & protocol for your site, e.g. http://example.com
 image: /assets/img/icons/favicon.ico              # used to generate site link preview
