--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -43,7 +43,7 @@
         - Product Owner for Infosys Test Data Management solution
         - Full stack developer at Infosys SET Labs (R&D for Validation servies CoE)
         - CRM application migration for a major US based Newsprint company
-        - Digital Content Management for a Fortune 500 Pharmaceutial company
+        - Digital Content Management for a Fortune 500 Pharmaceutical company
     institute: Infosys
   - image: /assets/img/icons/mgu.png
     date: Jun 2010 - Jun 2014
