--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -41,7 +41,7 @@
     content:
     - data:
         - Product Owner for Infosys Test Data Management solution
-        - Full stack developer at Infosys SET Labs (R&D for Validation servies CoE)
+        - Full stack developer at Infosys SET Labs (R&D for Validation services CoE)
         - CRM application migration for a major US based Newsprint company
         - Digital Content Management for a Fortune 500 Pharmaceutical company
     institute: Infosys
