--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -4,7 +4,7 @@
   icon: fab fa-github-square
 - channel: Email
   url: reemstk.cv@gmail.com
-  title: reemstk.cv [at] gmail [dot] com
+  title: reemstk [dot] cv [at] gmail [dot] com
   icon: fas fa-envelope
 - channel: LinkedIn
   url: https://www.linkedin.com/in/reemstk
