--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -26,18 +26,11 @@
     - data: 
         - Some Subjects of Interest
       item: 
-        - Predictive Analytics - ML Modelling using SAS Enterprise Miner
-        - Advanced Data Analysis using SPSS
-        - AI Concepts & Applications
+        - Analytics - ML Modelling using SAS Enterprise Miner, SPSS
         - Optimization Modelling for Business Analytics
         - Digital Platforms & Data Monetization
-        - Project Management
-        - Marketing of IT Products & Services
-        - Brand Management
-        - Risk Management
-        - Infrastucture Management
-        - Operations & Supply Chain Management       
-        - Social Marketing
+        - Project Management, Risk Management
+        - AI Concepts & Applications
         - Strategy
     - data: 
         - Product Intern at Delhivery - Logistics company
