--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -2,10 +2,10 @@
 # Timeline #
 ############
 #acad-events:
-  - image: /assets/img/icons/gt.png
-    date: 2025 - --
-    description: Grad Student (MS)
-    institute: Georgia Institute of Technology
+#  - image: /assets/img/icons/gt.png
+#    date: 2025 - --
+#    description: Grad Student (MS)
+#    institute: Georgia Institute of Technology
   - image: /assets/img/icons/ms.png
     date: May 2022 - Today
     description: Product Manager
