--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -3,10 +3,10 @@ name: Generate Sitemap
 on:
   push:
     branches:
-      - dev
+      - main
   pull_request:
     branches:
-      - dev
+      - main
 
 jobs:
   build:
