--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -26,6 +26,26 @@
         - Product Manager for Banking Console
         - Founding member of Automation Testing CoE
     institute: IDFC First Bank
+  - image: /assets/img/icons/delhivery.png
+    date: Apr 2020 - Jun 2020
+    description: Product Intern
+    content:
+    - data: 
+        - Location Intelligence product
+      item: 
+        - Productized Location Intelligence capabilities and developed GTM strategy
+        - Ideated theme and determined potential partners for a reusable marketing campaign
+    institute: Delhivery, IN
+  - image: /assets/img/icons/planatearth.jfif
+    date: Jan 2020 - Feb 2020
+    description: Social Work Intern
+    content:
+    - data: 
+        - Solid Waste Management Trust 
+      item:
+        - Content management for online marketplace of Upcycling Unit
+        - Business case for repurposing of End of Life Tires
+    institute: Plan@Earth, IN
   - image: /assets/img/icons/nmims.png
     date: Jun 2019 - May 2021
     description: Grad Student (MBA)
