--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -30,9 +30,7 @@
     date: Apr 2020 - Jun 2020
     description: Product Intern
     content:
-    - data: 
-        - Location Intelligence product
-      item: 
+    - item: 
         - Productized Location Intelligence capabilities and developed GTM strategy
         - Ideated theme and determined potential partners for a reusable marketing campaign
     institute: Delhivery, IN
@@ -40,9 +38,7 @@
     date: Jan 2020 - Feb 2020
     description: Social Work Intern
     content:
-    - data: 
-        - Solid Waste Management Trust 
-      item:
+    - item:
         - Content management for online marketplace of Upcycling Unit
         - Business case for repurposing of End of Life Tires
     institute: Plan@Earth, IN
