--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -31,7 +31,7 @@
     description: Product Intern
     content:
     - data:
-        -
+        - Domain - Logistics
       item: 
         - Productized Location Intelligence capabilities and developed GTM strategy
         - Ideated theme and determined potential partners for a reusable marketing campaign
@@ -41,7 +41,7 @@
     description: Social Work Intern
     content:
     - data:
-        -
+        - Domain - Solid Waste Management
       item:
         - Content management for online marketplace of Upcycling Unit
         - Business case for repurposing of End of Life Tires
