--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -36,7 +36,7 @@
         - Productized Location Intelligence capabilities and developed GTM strategy
         - Ideated theme and determined potential partners for a reusable marketing campaign
     institute: Delhivery, IN
-  - image: /assets/img/icons/planatearth.jfif
+  - image: /assets/img/icons/pe.png
     date: Jan 2020 - Feb 2020
     description: Social Work Intern
     content:
